changed thanks page

--- a/wsgi/osmdemo/templates/questionnaire/thanks.html
+++ b/wsgi/osmdemo/templates/questionnaire/thanks.html
@@ -19,7 +19,7 @@
 			<div data-role="content" data-theme="a">
 				<h4>Thank you for your submission!</h4>
 				<p>
-					You should receive a confirmation email at <b><i>{{ email }}</i></b> shortly. We appreciate your feedback and interest in the OpenShift Mobile project.
+					Thank you, <b><i>{{ email }}</i></b>, for your submission. We appreciate your feedback and interest in the OpenShift Mobile project.
 				</p>
 				<br/>
 				<div>- The OpenShift Mobile Team</div>
